feat: Remove authors from edition details
